--- a/index.html
+++ b/index.html
@@ -21,12 +21,100 @@ Select ONE Additional Feature to Add
   <title>Unit 5 Project</title>
   <meta charset="utf-8">
   <style>
+    .last-sentence {
+      color: red;
+      font-style: italic;
+    }
+   
+    .main{
+    display: flex; 
+    justify-content: space-around;
+    flex-wrap: wrap;
+    }
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
 
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: green;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+     body {background-image: url("https://cdn.glitch.global/40114d8d-4887-48a6-800c-4e68338660ca/RR8-31-3%20(1).webp?v=1732632979840");
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    html {
+      height: 100;
+    }
+    .deer{ 
+    border:2px solid;
+    margin:10px;
+    padding:10px}  
   </style>
 </head>
 <body>
-
- 
-
+  <h1>
+    <mark>Quizmas Sleepover!</mark>
+  </h1>
+<!-- <div class="main">
+  <div class= "flip-card">
+    <img src= "https://cdn.glitch.global/40114d8d-4887-48a6-800c-4e68338660ca/5ff2895951193f4812ae0944ec456c8e.jpg?v=1732202099905"
+  </div>
+  </div>
+  -->
+  <div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="https://cdn.glitch.global/40114d8d-4887-48a6-800c-4e68338660ca/5ff2895951193f4812ae0944ec456c8e.jpg?v=1732202099905" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1><u>Greetings!</u></h1>
+      <p>You are cordially invited to the Ballman abode for the annual Quizmas sleepover on Dec 13-14 or 14-15</p>
+      <p>On the agenda is: 
+     <ol>Hot Chocolate, Cookie Making, Secret Santa, Pj's, Games, Kitties</ol>
+      <span class="last-sentence">You're not gonna want to miss this!</span>
+      </p>
+    </div>
+  </div>
+</div>
+  
+<img class="deer" src="https://cdn.glitch.global/40114d8d-4887-48a6-800c-4e68338660ca/Rudolph2.jpg?v=1732633395998">
 </body>
 </html>
